[metadata]
name = rt-client
summary = Request Tracker Client
description_file =
    README.rst
author = Catherine Sanson
author_email = catherine.sanson@catalyst.net.nz
maintainer = Adrian Turjak
maintainer_email = adriant@catalyst.net.nz
home_page = https://gitlab.com/catalyst-cloud/rt-client
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    rt_client


[flake8]
max-line-length = 88
